[i18n, facet] missing registration of <no relation> msgid

--- a/i18n/de.po
+++ b/i18n/de.po
@@ -225,6 +225,9 @@ msgstr ""
 "können ein <a href=\"%s\">vollständiges Schema</a> mit Meta-Daten anzeigen.</"
 "div>"
 
+msgid "<no relation>"
+msgstr ""
+
 msgid "<not specified>"
 msgstr "<nicht spezifiziert>"
 
