--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.13.7-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 29 Sep 2011 14:08:07 +0200
+
 cubicweb (3.13.6-1) unstable; urgency=low
 
   * new upstream release
