--- a/i18n/en.po
+++ b/i18n/en.po
@@ -1816,9 +1816,6 @@ msgstr "show the workflow's history."
 msgid "ctxtoolbar"
 msgstr "toolbar"
 
-msgid "currently in synchronization"
-msgstr ""
-
 msgid "custom_workflow"
 msgstr "custom workflow"
 
@@ -2663,6 +2660,13 @@ msgstr "in state"
 
 msgid "in_state_object"
 msgstr "state of"
+
+msgid "in_synchronization"
+msgstr "in synchronization"
+
+msgctxt "CWSource"
+msgid "in_synchronization"
+msgstr "in synchronization"
 
 msgid "incontext"
 msgstr "in-context"
@@ -3634,6 +3638,11 @@ msgstr "specialized by"
 msgid "specifying %s is mandatory"
 msgstr ""
 
+msgid ""
+"start timestamp of the currently in synchronization, or NULL when no "
+"synchronization in progress."
+msgstr ""
+
 msgid "startup views"
 msgstr ""
 
@@ -3763,13 +3772,6 @@ msgid "symmetric"
 msgstr "symmetric"
 
 msgid "synchronization-interval must be greater than 1 minute"
-msgstr ""
-
-msgid "synchronizing"
-msgstr ""
-
-msgctxt "CWSource"
-msgid "synchronizing"
 msgstr ""
 
 msgid "table"
