--- a/i18n/es.po
+++ b/i18n/es.po
@@ -1890,9 +1890,6 @@ msgstr ""
 msgid "ctxtoolbar"
 msgstr "Barra de herramientas"
 
-msgid "currently in synchronization"
-msgstr ""
-
 msgid "custom_workflow"
 msgstr "Workflow específico"
 
@@ -2775,6 +2772,13 @@ msgstr "Estado"
 
 msgid "in_state_object"
 msgstr "Estado de"
+
+msgid "in_synchronization"
+msgstr ""
+
+msgctxt "CWSource"
+msgid "in_synchronization"
+msgstr ""
 
 msgid "incontext"
 msgstr "En el contexto"
@@ -3778,6 +3782,11 @@ msgstr "Especializado por"
 msgid "specifying %s is mandatory"
 msgstr "especificar %s es obligatorio"
 
+msgid ""
+"start timestamp of the currently in synchronization, or NULL when no "
+"synchronization in progress."
+msgstr ""
+
 msgid "startup views"
 msgstr "Vistas de inicio"
 
@@ -3912,13 +3921,6 @@ msgstr "Simétrico"
 
 msgid "synchronization-interval must be greater than 1 minute"
 msgstr "synchronization-interval debe ser mayor a 1 minuto"
-
-msgid "synchronizing"
-msgstr ""
-
-msgctxt "CWSource"
-msgid "synchronizing"
-msgstr ""
 
 msgid "table"
 msgstr "Tabla"
