[doc] update 3.14 release notes

--- a/doc/3.14.rst
+++ b/doc/3.14.rst
@@ -1,6 +1,9 @@
 Whats new in CubicWeb 3.14
 ==========================
 
+First notice CW 3.14 depends on yams 0.34 (which is incompatible with prior
+cubicweb releases regarding instance re-creation).
+
 API changes
 -----------
 
@@ -31,7 +34,7 @@ API changes
     upgrade.
 
   - client code use direct access to one of those methods on an entity (no code
-    known to do that)
+    known to do that).
 
 * `Entity._rest_attr_info` class method has been renamed to
   `Entity.cw_rest_attr_info`
@@ -49,7 +52,7 @@ API changes
   RelationField methods with the same names, that take a form as a parameter.
 
   **No backward compatibility yet**. It's still time to cry for it.
-  Cubes known to be affected: tracker, vcsfile, vcreview
+  Cubes known to be affected: tracker, vcsfile, vcreview.
 
 * `CWPermission` entity type and its associated require_permission relation type
   (abstract) and require_group relation definitions have been moved to a new
@@ -65,50 +68,97 @@ API changes
   new cube in cubes using this feature, along with a dependancy on cubicweb >=
   3.14.
 
-* jQuery has been updated to 1.6.4. No backward compat issue known (yet...)
+* jQuery has been updated to 1.6.4 and jquery-tablesorter to 2.0.5. No backward
+  compat issue known.
 
-* Table views refactoring : new RsetTableView and EntityTableView, as well as
-  rewritten an enhanced version of PyValTableView on the same bases.  Those
-  deprecates former `TableView`, `EntityAttributesTableView` and `CellView`,
+* Table views refactoring : new `RsetTableView` and `EntityTableView`, as well as
+  rewritten an enhanced version of `PyValTableView` on the same bases, with logic
+  moved to some column renderers and a layout. Those should be well documented
+  and deprecates former `TableView`, `EntityAttributesTableView` and `CellView`,
   which are however kept for backward compat, with some warnings that may not be
   very clear unfortunatly (you may see your own table view subclass name here,
   which doesn't make the problem that clear). Notice that `_cw.view('table',
   rset, *kwargs)` will be routed to the new `RsetTableView` or to the old
   `TableView` depending on given extra arguments. See #1986413.
 
+* `display_name` don't call .lower() anymore. This may leads to changes in your
+  user interface. Different msgid for upper/lower cases version of entity type
+  names, as this is the only proper way to handle this with some languages.
+
 * `IEditControlAdapter` has been deprecated in favor of `EditController`
   overloading, which was made easier by adding dedicated selectors called
-  `match_edited_type` and `match_form_id`
+  `match_edited_type` and `match_form_id`.
+
+* Pre 3.6 API backward compat has been dropped, though *data* migration
+  compatibility has been kept. You may have to fix errors due to old API usage
+  for your instance before to be able to run migration, but then you should be
+  able to upgrade even a pre 3.6 database.
+
+* Deprecated `cubicweb.web.views.iprogress` in favor of new `iprogress` cube.
+
+* Deprecated `cubicweb.web.views.flot` in favor of new `jqplot` cube.
 
 
 Unintrusive API changes
 -----------------------
 
-* refactored properties forms (eg user preferences and site wide properties) to
-  ease overridding
+* Refactored properties forms (eg user preferences and site wide properties) as
+  well as pagination components to ease overridding.
 
-* table view allows to set None in 'headers', meaning the label should be fetched
-  from the result set as done by default
+* New `cubicweb.web.uihelper` module with high-level helpers for uicfg.
 
-* new `anonymized_request` decorator to temporary run stuff as an anonymous
-  user, whatever the currently logged in user
+* New `anonymized_request` decorator to temporary run stuff as an anonymous
+  user, whatever the currently logged in user.
 
-* new 'verbatimattr' attribute view
+* New 'verbatimattr' attribute view.
+
+* New facet and form widget for Integer used to store binary mask.
+
+* New `js_href` function to generated proper javascript href.
+
+* `match_kwargs` and `match_form_params` selectors both accept a new
+  `once_is_enough` argument.
+
+* `printable_value` is now a method of request, and may be given dict of
+   formatters to use.
+
+* `[Rset]TableView` allows to set None in 'headers', meaning the label should be
+  fetched from the result set as done by default.
+
+* Field vocabulary computation on entity creation now takes `__linkto`
+  information into accounet.
+
+* Started a `cubicweb.pylintext` pylint plugin to help pylint analyzing cubes.
+
+
+RQL
+---
+
+* Support for HAVING in 'SET' and 'DELETE' queries.
+
+* new `AT_TZ` function to get back a timestamp at a given time-zone.
+
+* new `WEEKDAY` date extraction function
 
 
 User interface changes
 ----------------------
 
-* breadcrumb is properly kept when creating an entity with __linkto
+* Datafeed source now present an history of the latest import's log, including
+  global status and debug/info/warning/error messages issued during
+  imports. Import logs older than a configurable amount of time are automatically
+  deleted.
+
+* Breadcrumbs component is properly kept when creating an entity with '__linkto'.
 
 * users and groups management now really lead to that (i.e. includes *groups*
-  management)
+  management).
 
-* new 'jsonp' controller with 'jsonexport' and 'ejsonexport' views
+* New 'jsonp' controller with 'jsonexport' and 'ejsonexport' views.
 
 
 Configuration
 ------------
 
-* add option 'resources-concat' to make javascript/css files concatenation
-  optional
+* Added option 'resources-concat' to make javascript/css files concatenation
+  optional.
